--- a/Server/Views/customer.hbs
+++ b/Server/Views/customer.hbs
@@ -160,11 +160,11 @@
                         <td>{{address.phone}}</td>
                         <td>{{address.address}}</td>
                         <td>{{profile.status}}</td>
-                        <td>{{block_reason}}</td>
+                        <td style="color: #e813cf;">{{block_reason}}</td>
                         <td class="action-buttons">
                             {{#if profile.status}}
-                            <button class="unban-button" data-toggle="modal" data-target="#blockUserModal"
-                                data-user-id="{{_id}}">Mở chặn</button>
+                            <button class="unban-button" data-toggle="modal" data-target="#unbanConfirmationModal"
+                                data-user-id="{{_id}}" onclick="setUserId('{{_id}}')">Mở chặn</button>
                             {{else}}
                             <button class="ban-button" data-toggle="modal" data-target="#blockUserModal"
                                 data-user-id="{{_id}}" onclick="setUserId('{{_id}}')">Chặn</button>
@@ -201,6 +201,25 @@
                 </div>
             </div>
         </form>
+        <div class="modal" id="unbanConfirmationModal" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Bỏ chặn người dùng</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Bạn có chắc chắn muốn bỏ chặn người dùng không?</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Hủy</button>
+                        <button type="button" class="btn btn-primary" onclick="unbanUser()">Bỏ chặn</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <script>
         function setUserId(userId) {
