--- a/Server/Views/screenMessger.hbs
+++ b/Server/Views/screenMessger.hbs
@@ -190,12 +190,12 @@
       <div class="mx-3 text-sm text-gray-100">Thông báo</div>
     </div>
   </a>
-    <a href="/accountManagement" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="text-decoration: none">
-      <div class="flex" style=" padding: 12px;">
+    <a href="/customer" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="display: flex; text-decoration: none">
+      <div class="flex" style="padding: 12px;">
         <div>
-          <img class="w-5 h-5" src="account.png" alt="">
+          <img class="w-5 h-5 " src="iconuser.png" alt="">
         </div>
-        <div class="mx-3 text-sm text-gray-100">Quản lý tài khoản</div>
+        <div class="mx-3 text-sm text-gray-100 ">Quản Lý người dùng</div>
       </div>
     </a>
     <a href="/warehouse" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="text-decoration: none">
