--- a/Server/Views/screenWarehouse.hbs
+++ b/Server/Views/screenWarehouse.hbs
@@ -98,7 +98,22 @@
                     <div class="mx-3 text-sm text-gray-100 ">Tin Nhắn</div>
                 </div>
             </a>
-
+          <a href="/notifications" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="text-decoration: none">
+            <div class="flex" style=" padding: 12px;">
+              <div>
+                <img class="w-5 h-5" src="notifications.png" alt="">
+              </div>
+              <div class="mx-3 text-sm text-gray-100">Thông báo</div>
+            </div>
+          </a>
+          <a href="/customer" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="display: flex; text-decoration: none">
+            <div class="flex" style="padding: 12px;">
+              <div>
+                <img class="w-5 h-5 " src="iconuser.png" alt="">
+              </div>
+              <div class="mx-3 text-sm text-gray-100 ">Quản Lý người dùng</div>
+            </div>
+          </a>
             <a href="/warehouse" class="cursor-pointer mess ml-3 mt-3 w-10/12"
                 style="border-bottom-width: 1px; text-decoration: none">
                 <div class="flex" style=" padding: 12px;">
