--- a/Server/Views/screenWarehouse.hbs
+++ b/Server/Views/screenWarehouse.hbs
@@ -9,6 +9,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <style>
         .modal-title {
             font-weight: bold;
@@ -149,7 +150,25 @@
             <div class="card-container flex m-7 space-x-6 ">
                 <div class="card w-full">
                     <div class="card-header">
-                        <button class="btn btn-primary" data-toggle="modal" data-target="#addProductModal">Thêm sản phẩm
+
+                        <div class="dropdown">
+                            <button class="btn btn-secondary dropdown-toggle float-left" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                {{#if category}}
+                                    {{category}}
+                                {{else}}
+                                    Tất cả
+                                {{/if}}
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="/warehouse">Tất cả</a></li>
+                                <li><a class="dropdown-item" href="/warehouse/men">Nam</a></li>
+                                <li><a class="dropdown-item" href="/warehouse/women">Nữ</a></li>
+                                <li><a class="dropdown-item" href="/warehouse/children">Trẻ em</a></li>
+                            </ul>
+                        </div>
+                        
+                        
+                        <button class="btn btn-primary float-right" data-toggle="modal" data-target="#addProductModal">Thêm sản phẩm
                         </button>
 
                     </div>
